--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,31 @@
 .App-intro {
   font-size: large;
 }
+.post-card{
+  padding: 5px 5px;
+  border:1px solid whitesmoke;
+  border-radius: 3px;
+  margin-bottom: 15px;
+  box-shadow:0 1px 5px rgba(104, 104, 104, 0.8);
+  
+}
+small:hover{
+  border:1px solid whitesmoke;
+  padding: 2px 2px;
+  border-radius: 3px;
+  box-shadow:0 1px 5px rgba(104, 104, 104, 0.8);
+  cursor: pointer;
+}
+span:hover{
+  /* border:1px solid whitesmoke; */
+  padding:0;
+  /* border-radius: 3px;
+  box-shadow:0 1px 5px rgba(104, 104, 104, 0.8); */
+  cursor: pointer;
+}
+textarea{
+  width: 250px;
+}
 
 @keyframes App-logo-spin {
   from {
